--- a/docs/guide/index.asciidoc
+++ b/docs/guide/index.asciidoc
@@ -12,6 +12,8 @@ include::connecting.asciidoc[]
 
 include::configuration.asciidoc[]
 
+include::migration.asciidoc[]
+
 include::integrations.asciidoc[]
 
 include::examples.asciidoc[]
