--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-7-16-1>>
 * <<rn-7-16-0>>
 * <<rn-7-15-2>>
 * <<rn-7-15-1>>
@@ -31,6 +32,16 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+
+[discrete]
+[[rn-7-16-1]]
+=== 7.16.1 (2021-12-13)
+
+[discrete]
+==== Fixed
+
+- Fixed issue where the `AIOHttpConnection` wouldn't log query parameters for URLs.
 
 
 [discrete]
