--- a/docs/examples/2533e4b36ae837eaecda08407ecb6383.asciidoc
+++ b/docs/examples/2533e4b36ae837eaecda08407ecb6383.asciidoc
@@ -6,7 +6,7 @@ resp = client.search(
     body={
         "suggest": {
             "my-suggest-1": {
-                "text": "tring out Elasticsearch",
+                "text": "trying out Elasticsearch",
                 "term": {"field": "message"},
             },
             "my-suggest-2": {"text": "kmichy", "term": {"field": "user"}},
