--- a/docs/examples/626f8c4b3e2cd3d9beaa63a7f5799d7a.asciidoc
+++ b/docs/examples/626f8c4b3e2cd3d9beaa63a7f5799d7a.asciidoc
@@ -5,10 +5,10 @@
 resp = client.search(
     index="twitter",
     body={
-        "query": {"match": {"message": "tring out Elasticsearch"}},
+        "query": {"match": {"message": "trying out Elasticsearch"}},
         "suggest": {
             "my-suggestion": {
-                "text": "tring out Elasticsearch",
+                "text": "trying out Elasticsearch",
                 "term": {"field": "message"},
             }
         },
