--- a/docs/guide/overview.asciidoc
+++ b/docs/guide/overview.asciidoc
@@ -32,11 +32,11 @@ Simple use-case:
 >>> es = Elasticsearch("http://localhost:9200")
 
 # Datetimes will be serialized:
->>> es.index(index="my-index-000001", doc_type="test-type", id=42, body={"any": "data", "timestamp": datetime.now()})
+>>> es.index(index="my-index-000001", id=42, document={"any": "data", "timestamp": datetime.now()})
 {'_id': '42', '_index': 'my-index-000001', '_type': 'test-type', '_version': 1, 'ok': True}
 
 # ...but not deserialized
->>> es.get(index="my-index-000001", doc_type="test-type", id=42)['_source']
+>>> es.get(index="my-index-000001", id=42)['_source']
 {'any': 'data', 'timestamp': '2013-05-12T19:45:31.804229'}
 ------------------------------------
 
