--- a/docs/guide/helpers.asciidoc
+++ b/docs/guide/helpers.asciidoc
@@ -26,7 +26,6 @@ example:
 ----------------------------
 {
   '_index': 'index-name',
-  '_type': 'document',
   '_id': 42,
   '_routing': 5,
   'pipeline': 'my-ingest-pipeline',
@@ -58,13 +57,11 @@ the `_op_type` field to specify an action (`_op_type` defaults to `index`):
 {
   '_op_type': 'delete',
   '_index': 'index-name',
-  '_type': 'document',
   '_id': 42,
 }
 {
   '_op_type': 'update',
   '_index': 'index-name',
-  '_type': 'document',
   '_id': 42,
   'doc': {'question': 'The life, universe and everything.'}
 }
@@ -88,7 +85,6 @@ operation and will negate the performance benefits of using `scan`.
 ----------------------------
 scan(es,
     query={"query": {"match": {"title": "python"}}},
-    index="orders-*",
-    doc_type="books"
+    index="orders-*"
 )
 ----------------------------
