Add 7.16.3 release to release notes

--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-7-16-3>>
 * <<rn-7-16-2>>
 * <<rn-7-16-1>>
 * <<rn-7-16-0>>
@@ -36,10 +37,18 @@
 
 
 [discrete]
+[[rn-7-16-3]]
+=== 7.16.3 (2022-1-13)
+
+* Client is compatible with Elasticsearch 7.16.3
+
+
+[discrete]
 [[rn-7-16-2]]
 === 7.16.2 (2021-12-27)
 
 * Client is compatible with Elasticsearch 7.16.2
+
 
 [discrete]
 [[rn-7-16-1]]
