--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-0-0>>
 * <<rn-7-17-0>>
 * <<rn-7-16-3>>
 * <<rn-7-16-2>>
@@ -38,10 +39,125 @@
 
 
 [discrete]
+[[rn-8-0-0]]
+=== 8.0.0 (2022-02-10)
+
+[discrete]
+==== Added
+
+- Added the top-level `.options()` method to `Elasticsearch` and `AsyncElasticsearch` for modifying transport options.
+- Added parameters corresponding to JSON request body fields for all APIs
+- Added `basic_auth` parameter for specifying username and password authentication
+- Added `bearer_auth` parameter for specifying an HTTP bearer token or service token
+- Added the `meta` property to `ApiError` to access the HTTP response metadata of an error.
+- Added a check that a compatible version of the `elastic-transport` package is installed.
+
+[discrete]
+==== Changed
+
+- Changed the transport layer to use the `elastic-transport` package
+- Changed user-defined `body` parameters to have semantic names (e.g `index(document={...})` instead of `index(body={...})`).
+- Changed responses to be objects with two properties, `meta` for response metadata (HTTP status, headers, node, etc) and `body` for a typed body.
+- Changed `AsyncElasticsearch` to always be available, regardless of whether `aiohttp` is installed
+- Changed exception hierarchy, the major change is a new exception `ApiError` which differentiates between an error that's raised from the transport layer (previously `elasticsearch.exceptions.TransportError`, now `elastic_transport.TransportError`) and one raised from the API layer
+- Changed the name of `JSONSerializer` to `JsonSerializer` for consistency with other serializer names. Added an alias to the old name for backwards compatibility
+- Changed the default mimetypes (`application/json`) to instead use compatibility mimetypes (`application/vnd.elasticsearch+json`) which always request for responses compatibility with version 8.x.
+
+[discrete]
+==== Removed
+
+- Removed support for Python 2.7 and Python 3.5, the library now supports only Python 3.6+
+- Removed the `elasticsearch.connection` module as all functionality has been moved to the `elastic-transport` package
+- Removed the default URL of `http://localhost:9200` due to Elasticsearch 8.0 default configuration being `https://localhost:9200`.
+  The client's connection to Elasticsearch now must be specified with scheme, host, and port or with the `cloud_id` parameter
+- Removed the ability to use positional arguments with API methods. Going forward all API parameters must be keyword-only parameters
+- Removed the `doc_type`, `include_type_name`, and `copy_settings` parameters from many document and index APIs
+
+[discrete]
+==== Deprecated
+
+- Deprecated the `body` and `params` parameters on all APIs
+- Deprecated setting transport options `http_auth`, `api_key`, `ignore`, `request_timeout`, `headers`, and `opaque_id`
+  All of these settings should instead be set via the `.options()` method
+- Deprecated the `elasticsearch.transport` and `elasticsearch.client` modules. These modules will be removed in a future version
+
+[discrete]
+==== CAT
+
+- Removed the deprecated `local` parameter from the `cat.indices`, `cat.nodes`, `cat.shards` API
+- Removed the deprecated `allow_no_datafeeds` parameter from the `cat.ml_datafeeds` API
+- Removed the deprecated `allow_no_jobs` parameter from the `cat.ml_jobs` API
+- Removed the deprecated `size` parameter from the `cat.thread_pool` API
+- Added the `time` parameter to the `cat.thread_pool` API
+
+[discrete]
+==== Documents
+
+- Removed the deprecated `size` parameter from the `delete_by_query` API
+- Removed the deprecated `size` parameter from the `update_by_query` API
+
+[discrete]
+==== Indices
+
+- Removed the deprecated `indices.flush_synced` API
+- Removed the deprecated `indices.freeze` API
+- Removed the deprecated `indices.get_upgrade` API
+- Removed the deprecated `indices.upgrade` API
+- Removed the deprecated `indices.exist_type` API
+- Removed the deprecated parameter `copy_settings` from the `indices.shrink` API
+- Deprecated the `verbose` parameter of the `indices.segments` API
+
+[discrete]
+==== License / X-Pack
+
+- Deprecated the `accept_enterprise` parameter of the `license.get` API
+- Deprecated the `accept_enterprise` parameter of the `xpack.info` API
+
+[discrete]
+==== Machine Learning
+
+- Added the **experimental** `ml.infer_trained_model_deployment` API
+- Added the **experimental** `ml.put_trained_model_definition_part` API
+- Added the **experimental** `ml.put_trained_model_vocabulary` API
+- Added the **experimental** `ml.start_trained_model_deployment` API
+- Added the **experimental** `ml.stop_trained_model_deployment` API
+- Added the `timeout` parameter to the `ml.delete_trained_model` API
+- Removed the deprecated `allow_no_jobs` parameter from the `ml.close_job` API
+- Removed the deprecated `ml.find_text_structure` API
+- Removed the deprecated `allow_no_datafeeds` parameter from the `ml.get_datafeed_stats` API
+- Removed the deprecated `allow_no_datafeeds` parameter from the `ml.get_datafeeds` API
+- Removed the deprecated `allow_no_jobs` parameter from the `ml.get_job_stats` API
+- Removed the deprecated `allow_no_jobs` parameter from the `ml.get_jobs` API
+- Removed the deprecated `allow_no_jobs` parameter from the `ml.get_overall_buckets` API
+
+[discrete]
+==== Search
+
+- Added the **experimental** `knn_search` API
+
+[discrete]
+==== Searchable Snapshots
+
+- Removed the deprecated `searchable_snapshots.repository_stats` API
+
+[discrete]
+==== Snapshots
+
+- Changed the `snapshot.delete` API to accept multiple snapshots
+
+[discrete]
+==== Security
+
+- Added the `security.enroll_kibana` API
+- Added the `security.enroll_node` API
+
+
+[discrete]
 [[rn-7-17-0]]
 === 7.17.0 (2022-02-01)
 
 * Client is compatible with Elasticsearch 7.17.0
+
 
 [discrete]
 [[rn-7-16-3]]
